--- a/MNIST digit CNN.ipynb
+++ b/MNIST digit CNN.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,8 +158,22 @@
       "Epoch 2/5\n",
       "60000/60000 [==============================] - 32s 539us/step - loss: 0.0505 - accuracy: 0.9842\n",
       "Epoch 3/5\n",
-      "57152/60000 [===========================>..] - ETA: 1s - loss: 0.0347 - accuracy: 0.9894"
+      "60000/60000 [==============================] - 28s 461us/step - loss: 0.0343 - accuracy: 0.9894\n",
+      "Epoch 4/5\n",
+      "60000/60000 [==============================] - 23s 391us/step - loss: 0.0263 - accuracy: 0.9917\n",
+      "Epoch 5/5\n",
+      "60000/60000 [==============================] - 23s 387us/step - loss: 0.0209 - accuracy: 0.9935\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.callbacks.History at 0x1ce4397f2c8>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -171,18 +185,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000/10000 [==============================] - 2s 153us/step\n"
+     ]
+    }
+   ],
    "source": [
     "test_loss, test_acc = model.evaluate(test_images, test_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9925000071525574"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_acc"
    ]
